home_passenger_screen.dart

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,8 @@
 
   <title>new_mashi</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-HoPJDvh26OGpy1W_fGqjwIn0Ruw2ReE"></script>
+
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
